tests/derive-tests/as_variant_ref/fail/union.err.txt
error: expected `enum`
 --> /tests/derive-tests/as_variant_ref/fail/union.rs:4:5
  |
4 | pub union Union {
  |     ^^^^^
